--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_animate: ^4.1.1+1
   go_router: ^6.0.1
+  hive: ^2.2.3
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
